[NOBTS] Add missing security manager.